My account coutry field alignment Issue fix

--- a/src/app/pages/ai-agents/form/ai-agent-marketing/ai-agent-marketing.component.css
+++ b/src/app/pages/ai-agents/form/ai-agent-marketing/ai-agent-marketing.component.css
@@ -280,4 +280,5 @@
 
 .info-icon{
   padding-left: 10px;
+  cursor: pointer;
 }
